perfect code.